Ceda ii started, with a more idealized dataset.

--- a/code/cleaning_and_eda_i.ipynb
+++ b/code/cleaning_and_eda_i.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "id": "727b1749",
    "metadata": {},
    "outputs": [
@@ -263,7 +263,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,6 +272,33 @@
     "df = pd.read_csv('../data/chicago_taxis_i.csv')\n",
     "print(df.shape)\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "fe329611",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['taxi_id', 'trip_seconds', 'trip_miles', 'pickup_community_area',\n",
+       "       'dropoff_community_area', 'fare', 'tips', 'tolls', 'extras',\n",
+       "       'trip_total', 'payment_type', 'company', 'pickup_latitude',\n",
+       "       'pickup_longitude', 'pickup_location', 'dropoff_latitude',\n",
+       "       'dropoff_longitude', 'dropoff_location', 'tip_percentage', 'start_date',\n",
+       "       'start_time'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns #Phew they're already in the format we like (lower cased and no spaces)"
    ]
   },
   {
@@ -671,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "c133afef",
    "metadata": {},
    "outputs": [],
@@ -690,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "id": "9475e6ce",
    "metadata": {},
    "outputs": [],
@@ -710,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "25f35bc4",
    "metadata": {},
    "outputs": [
@@ -744,7 +771,7 @@
        "Name: trip_seconds, dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -762,6 +789,7 @@
     "\n",
     "df['trip_seconds'].replace(np.nan,0.0, inplace=True)\n",
     "\n",
+    "print(df[df['trip_seconds']==0].shape[0]/df.shape[0])\n",
     "df['trip_seconds'].describe()"
    ]
   },
@@ -781,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "84cbc087",
    "metadata": {},
    "outputs": [
@@ -807,7 +835,7 @@
        "Name: trip_miles, dtype: float64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -829,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "5ec5fca0",
    "metadata": {},
    "outputs": [
@@ -853,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "7dabe68d",
    "metadata": {},
    "outputs": [
@@ -881,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "2712e612",
    "metadata": {},
    "outputs": [
@@ -899,7 +927,7 @@
        "Name: fare, dtype: float64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -910,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "f531a27f",
    "metadata": {},
    "outputs": [
@@ -928,7 +956,7 @@
        "Name: fare, dtype: float64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "d6e1ce57",
    "metadata": {},
    "outputs": [
@@ -957,7 +985,7 @@
        "Name: fare, dtype: float64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -968,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "e00826b6",
    "metadata": {},
    "outputs": [
@@ -986,7 +1014,7 @@
        "Name: fare, dtype: float64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -997,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "id": "e5356274",
    "metadata": {},
    "outputs": [
@@ -1015,7 +1043,7 @@
        "Name: fare, dtype: float64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1036,40 +1064,43 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "86752466",
+   "cell_type": "markdown",
+   "id": "b75e92ed",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Eh, I took a shower and decided to go back to Google BigQuery to add to the SQL pull only if the trip is at least a second long. Although we did some calculations below and seemingly in this pull any trip that is 0 seconds also went 0 miles... let's be strict when we re. pull to get at least a trip with a bit of meat on it...\n",
+    "\n",
+    "I decided this for two reasons:<br>\n",
+    "1) Unlike in the theoretical corporate case - this data or back to the LinkedIn job market, we have more data...<br>\n",
+    "2) I think it will be more fun to actually analyze proper taxi trips.\n",
+    "\n",
+    "So, back to BigQuery we go."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "835a0910",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape[0] == df[(df['trip_seconds']==0)&(df['trip_seconds']==0)].shape[0] + df[(df['trip_seconds']!=0)|(df['trip_seconds']!=0)].shape[0]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a6e83fc2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "17e8bcee",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "003d446b",
    "metadata": {},
    "outputs": [
@@ -1282,7 +1313,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1293,10 +1324,231 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "6ead8aad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>taxi_id</th>\n",
+       "      <th>trip_seconds</th>\n",
+       "      <th>trip_miles</th>\n",
+       "      <th>pickup_community_area</th>\n",
+       "      <th>dropoff_community_area</th>\n",
+       "      <th>fare</th>\n",
+       "      <th>tips</th>\n",
+       "      <th>tolls</th>\n",
+       "      <th>extras</th>\n",
+       "      <th>trip_total</th>\n",
+       "      <th>...</th>\n",
+       "      <th>company</th>\n",
+       "      <th>pickup_latitude</th>\n",
+       "      <th>pickup_longitude</th>\n",
+       "      <th>pickup_location</th>\n",
+       "      <th>dropoff_latitude</th>\n",
+       "      <th>dropoff_longitude</th>\n",
+       "      <th>dropoff_location</th>\n",
+       "      <th>tip_percentage</th>\n",
+       "      <th>start_date</th>\n",
+       "      <th>start_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>19995</th>\n",
+       "      <td>taxi_11</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12.05</td>\n",
+       "      <td>8.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>20.05</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Taxi Affiliation Services</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>2013-10-12</td>\n",
+       "      <td>01:45:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19996</th>\n",
+       "      <td>taxi_944</td>\n",
+       "      <td>701.0</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>12.65</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>14.55</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Flash Cab</td>\n",
+       "      <td>41.892042</td>\n",
+       "      <td>-87.631864</td>\n",
+       "      <td>POINT (-87.6318639497 41.8920421365)</td>\n",
+       "      <td>41.934762</td>\n",
+       "      <td>-87.639854</td>\n",
+       "      <td>POINT (-87.6398538587 41.9347624564)</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>2013-10-12</td>\n",
+       "      <td>02:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19997</th>\n",
+       "      <td>taxi_1028</td>\n",
+       "      <td>377.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7.25</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>11.75</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Flash Cab</td>\n",
+       "      <td>41.907492</td>\n",
+       "      <td>-87.635760</td>\n",
+       "      <td>POINT (-87.6357600901 41.9074919303)</td>\n",
+       "      <td>41.921855</td>\n",
+       "      <td>-87.646211</td>\n",
+       "      <td>POINT (-87.6462109769 41.9218549112)</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>2013-10-12</td>\n",
+       "      <td>02:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19998</th>\n",
+       "      <td>taxi_922</td>\n",
+       "      <td>1729.0</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>16.45</td>\n",
+       "      <td>3.49</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>20.94</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Flash Cab</td>\n",
+       "      <td>41.892508</td>\n",
+       "      <td>-87.626215</td>\n",
+       "      <td>POINT (-87.6262149064 41.8925077809)</td>\n",
+       "      <td>41.945282</td>\n",
+       "      <td>-87.661545</td>\n",
+       "      <td>POINT (-87.6615450961 41.9452823311)</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>2013-10-12</td>\n",
+       "      <td>02:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19999</th>\n",
+       "      <td>taxi_648</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.05</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.05</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Taxi Affiliation Services</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>2013-10-12</td>\n",
+       "      <td>02:00:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         taxi_id  trip_seconds  trip_miles  pickup_community_area  \\\n",
+       "19995    taxi_11           0.0         0.0                    NaN   \n",
+       "19996   taxi_944         701.0         4.7                    8.0   \n",
+       "19997  taxi_1028         377.0         2.0                    8.0   \n",
+       "19998   taxi_922        1729.0         5.3                    8.0   \n",
+       "19999   taxi_648           0.0         0.0                    NaN   \n",
+       "\n",
+       "       dropoff_community_area   fare  tips  tolls  extras  trip_total  ...  \\\n",
+       "19995                     NaN  12.05  8.00    0.0     0.0       20.05  ...   \n",
+       "19996                     6.0  12.65  1.90    NaN     0.0       14.55  ...   \n",
+       "19997                     7.0   7.25  2.00    NaN     2.5       11.75  ...   \n",
+       "19998                     6.0  16.45  3.49    NaN     1.0       20.94  ...   \n",
+       "19999                     NaN   7.05  2.00    0.0     0.0        9.05  ...   \n",
+       "\n",
+       "                         company pickup_latitude  pickup_longitude  \\\n",
+       "19995  Taxi Affiliation Services             NaN               NaN   \n",
+       "19996                  Flash Cab       41.892042        -87.631864   \n",
+       "19997                  Flash Cab       41.907492        -87.635760   \n",
+       "19998                  Flash Cab       41.892508        -87.626215   \n",
+       "19999  Taxi Affiliation Services             NaN               NaN   \n",
+       "\n",
+       "                            pickup_location dropoff_latitude  \\\n",
+       "19995                                   NaN              NaN   \n",
+       "19996  POINT (-87.6318639497 41.8920421365)        41.934762   \n",
+       "19997  POINT (-87.6357600901 41.9074919303)        41.921855   \n",
+       "19998  POINT (-87.6262149064 41.8925077809)        41.945282   \n",
+       "19999                                   NaN              NaN   \n",
+       "\n",
+       "       dropoff_longitude                      dropoff_location tip_percentage  \\\n",
+       "19995                NaN                                   NaN           0.66   \n",
+       "19996         -87.639854  POINT (-87.6398538587 41.9347624564)           0.15   \n",
+       "19997         -87.646211  POINT (-87.6462109769 41.9218549112)           0.28   \n",
+       "19998         -87.661545  POINT (-87.6615450961 41.9452823311)           0.21   \n",
+       "19999                NaN                                   NaN           0.28   \n",
+       "\n",
+       "       start_date start_time  \n",
+       "19995  2013-10-12   01:45:00  \n",
+       "19996  2013-10-12   02:00:00  \n",
+       "19997  2013-10-12   02:00:00  \n",
+       "19998  2013-10-12   02:00:00  \n",
+       "19999  2013-10-12   02:00:00  \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.tail()"
    ]
