--- a/code/ceda_ii.ipynb
+++ b/code/ceda_ii.ipynb
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "08965477",
    "metadata": {},
    "outputs": [
@@ -376,7 +376,7 @@
        "Name: trip_seconds, dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "94153367",
    "metadata": {},
    "outputs": [
@@ -425,7 +425,7 @@
        "Name: trip_miles, dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "0bae2d4c",
    "metadata": {},
    "outputs": [
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "88ccad9d",
    "metadata": {},
    "outputs": [
@@ -488,7 +488,7 @@
        "Name: fare, dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,28 +502,272 @@
    "id": "4dcc352a",
    "metadata": {},
    "source": [
-    "Continuing the theme of right skews, yet reasonable. Quite happy with this."
+    "Continuing the theme of right skews, yet reasonable. Quite happy with this.\n",
+    "\n",
+    "HOWEVER, bear in mind that this will be correlated, likely, with miles and times - the main (if not only) calculations of the factor, save perhaps a base pick-up fare."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "144eae3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    38349.000000\n",
+       "mean         0.859318\n",
+       "std          2.239966\n",
+       "min          0.000000\n",
+       "25%          0.000000\n",
+       "50%          0.000000\n",
+       "75%          1.000000\n",
+       "max         99.500000\n",
+       "Name: extras, dtype: float64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Saving tips for later as that's our target...potentially.\n",
+    "\n",
+    "df['extras'].describe() #Unsurprising as generally people don't have extras like vomit-cleaning fees..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f76b7f96",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    38349.000000\n",
+       "mean        16.760136\n",
+       "std         13.620977\n",
+       "min          3.650000\n",
+       "25%          8.450000\n",
+       "50%         11.050000\n",
+       "75%         18.150000\n",
+       "max        300.850000\n",
+       "Name: trip_total, dtype: float64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['trip_total'].describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc1641b1",
+   "metadata": {},
+   "source": [
+    "Completely unsurprising that this also skewed o the right as seemingly this is jut a simple add. Yet a precise add does not yield the same results for a bit less than 10% of the cases (below). However, this seems to be via rounding errors as look at the head - row 4's far of 3.85 and tip of 15.71 equals 19.56....yet via rounding in one of the features it's not precisely the same. However, plus or minus a penny we have no excepetions - so yes, trip_total is a function of those three.\n",
+    "\n",
+    "For later prediction purposes, it won't behoove us to keep trip_total unadjusted as it already includes our target - the fare. So, we'll change it to remove the fare momentarily."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "0964866c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3522\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df[df['trip_total'] != df['fare'] + df['tips'] + df['extras']].shape[0])\n",
+    "\n",
+    "print(df[~df['trip_total'].between(df['fare'] + df['tips'] + df['extras']-.01,df['fare'] + df['tips'] + df['extras']+.01)].shape[0])\n",
+    "\n",
+    "df['trip_total_pre_tip'] = df['trip_total'] - df['tips']\n",
+    "\n",
+    "df = df.drop(['trip_total'], axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "50e74958",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "payment_type\n",
+       "Credit Card    38342\n",
+       "Cash               7\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['payment_type'].value_counts(normalize=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a27d45f",
+   "metadata": {},
+   "source": [
+    " Oh wow... I didn't realize that many people use credi cards (in 2015). Wow, a bit tempted to just drop this column when so few people use cash. To do things justice, I'll at least look at them first (even though in conjunction with the consideration of other factors cash might contriubte to tipping less (or technically the reverse), per the small sample we have..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "732f56d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>payment_type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Cash</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>3.242857</td>\n",
+       "      <td>4.101060</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>11.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Credit Card</th>\n",
+       "      <td>38342.0</td>\n",
+       "      <td>2.913440</td>\n",
+       "      <td>2.739069</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>1.99</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>270.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                count      mean       std   min   25%  50%  75%     max\n",
+       "payment_type                                                           \n",
+       "Cash              7.0  3.242857  4.101060  0.05  1.00  1.0  4.2   11.25\n",
+       "Credit Card   38342.0  2.913440  2.739069  0.01  1.99  2.0  3.0  270.00"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('payment_type')['tips'].describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c298fdcb",
+   "metadata": {},
+   "source": [
+    "Oh wow, the mean of cash is a bit higher; median on the other hand... However, with such few results I think I'll ignore this column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "1711abcb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop(['payment_type'], axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cc0cc75",
+   "metadata": {},
+   "source": [
+    "Oooh date. On the topic - recall that we're in the month of January, a typically cold month in Chicago (without examining what actually happened, but statistically...). As far as I know, nothing stands out re. 2015... However, the weekend factor might contribute to matters, assuming most people have off Saturday and on Sunday (and on that note Friday evening, say after 19, should likely also be considered an evening...\n",
+    "\n",
+    "So, it's incumbent upon us to make day-of-the-week guys. I'll preserve the original in case we need it; eh, we still have our dataset... On that note, it might be interesting to make nighttime/daytime variables.\n",
+    "\n",
+    "From a time series perspective I think a month's change is negligible of changes in culture, inflation, etc. However, around the clock could provide an interesting perspective.\n",
+    "\n",
+    "For this first analysis we'll go about things normally, but we might as well arrange things later by time. Note then that we'd need to average all of the features together, potentially going back to SQL to do so."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "144eae3d",
+   "id": "1a66af02",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f76b7f96",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "id": "cb84c008",
    "metadata": {},
    "outputs": [
@@ -556,10 +800,9 @@
        "      <th>fare</th>\n",
        "      <th>tips</th>\n",
        "      <th>extras</th>\n",
-       "      <th>trip_total</th>\n",
-       "      <th>payment_type</th>\n",
        "      <th>start_date</th>\n",
        "      <th>start_time</th>\n",
+       "      <th>trip_total_pre_tip</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -573,10 +816,9 @@
        "      <td>5.65</td>\n",
        "      <td>1.00</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>6.65</td>\n",
-       "      <td>Credit Card</td>\n",
        "      <td>2015-01-14</td>\n",
        "      <td>14:30:00</td>\n",
+       "      <td>5.65</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -588,10 +830,9 @@
        "      <td>12.25</td>\n",
        "      <td>2.45</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>14.70</td>\n",
-       "      <td>Credit Card</td>\n",
        "      <td>2015-01-16</td>\n",
        "      <td>03:30:00</td>\n",
+       "      <td>12.25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -603,10 +844,9 @@
        "      <td>11.65</td>\n",
        "      <td>2.91</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>14.56</td>\n",
-       "      <td>Credit Card</td>\n",
        "      <td>2015-01-01</td>\n",
        "      <td>01:30:00</td>\n",
+       "      <td>11.65</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -618,10 +858,9 @@
        "      <td>3.85</td>\n",
        "      <td>15.71</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>19.56</td>\n",
-       "      <td>Credit Card</td>\n",
        "      <td>2015-01-24</td>\n",
        "      <td>06:00:00</td>\n",
+       "      <td>3.85</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -633,10 +872,9 @@
        "      <td>4.85</td>\n",
        "      <td>1.00</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>5.85</td>\n",
-       "      <td>Credit Card</td>\n",
        "      <td>2015-01-06</td>\n",
        "      <td>22:00:00</td>\n",
+       "      <td>4.85</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -650,22 +888,22 @@
        "3  taxi_0           104         0.4                    6.0   \n",
        "4  taxi_0           176         0.8                    6.0   \n",
        "\n",
-       "   dropoff_community_area   fare   tips  extras  trip_total payment_type  \\\n",
-       "0                    32.0   5.65   1.00     0.0        6.65  Credit Card   \n",
-       "1                    22.0  12.25   2.45     0.0       14.70  Credit Card   \n",
-       "2                     6.0  11.65   2.91     0.0       14.56  Credit Card   \n",
-       "3                     6.0   3.85  15.71     0.0       19.56  Credit Card   \n",
-       "4                     6.0   4.85   1.00     0.0        5.85  Credit Card   \n",
+       "   dropoff_community_area   fare   tips  extras  start_date start_time  \\\n",
+       "0                    32.0   5.65   1.00     0.0  2015-01-14   14:30:00   \n",
+       "1                    22.0  12.25   2.45     0.0  2015-01-16   03:30:00   \n",
+       "2                     6.0  11.65   2.91     0.0  2015-01-01   01:30:00   \n",
+       "3                     6.0   3.85  15.71     0.0  2015-01-24   06:00:00   \n",
+       "4                     6.0   4.85   1.00     0.0  2015-01-06   22:00:00   \n",
        "\n",
-       "   start_date start_time  \n",
-       "0  2015-01-14   14:30:00  \n",
-       "1  2015-01-16   03:30:00  \n",
-       "2  2015-01-01   01:30:00  \n",
-       "3  2015-01-24   06:00:00  \n",
-       "4  2015-01-06   22:00:00  "
+       "   trip_total_pre_tip  \n",
+       "0                5.65  \n",
+       "1               12.25  \n",
+       "2               11.65  \n",
+       "3                3.85  \n",
+       "4                4.85  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,22 +911,6 @@
    "source": [
     "df.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b4e9779",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c48a866b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
