A bit more progress

--- a/code/ceda_ii.ipynb
+++ b/code/ceda_ii.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "id": "d4bd5fa3",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from datetime import datetime, time"
    ]
   },
   {
@@ -509,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "144eae3d",
    "metadata": {},
    "outputs": [
@@ -527,7 +528,7 @@
        "Name: extras, dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "f76b7f96",
    "metadata": {},
    "outputs": [
@@ -558,7 +559,7 @@
        "Name: trip_total, dtype: float64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +570,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc1641b1",
+   "id": "143a6235",
    "metadata": {},
    "source": [
     "Completely unsurprising that this also skewed o the right as seemingly this is jut a simple add. Yet a precise add does not yield the same results for a bit less than 10% of the cases (below). However, this seems to be via rounding errors as look at the head - row 4's far of 3.85 and tip of 15.71 equals 19.56....yet via rounding in one of the features it's not precisely the same. However, plus or minus a penny we have no excepetions - so yes, trip_total is a function of those three.\n",
@@ -579,8 +580,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "0964866c",
+   "execution_count": 15,
+   "id": "6f4ad45e",
    "metadata": {},
    "outputs": [
     {
@@ -604,8 +605,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "50e74958",
+   "execution_count": 16,
+   "id": "727373dd",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +618,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a27d45f",
+   "id": "1fc49450",
    "metadata": {},
    "source": [
     " Oh wow... I didn't realize that many people use credi cards (in 2015). Wow, a bit tempted to just drop this column when so few people use cash. To do things justice, I'll at least look at them first (even though in conjunction with the consideration of other factors cash might contriubte to tipping less (or technically the reverse), per the small sample we have..."
@@ -636,8 +637,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "732f56d5",
+   "execution_count": 17,
+   "id": "84f74200",
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +717,7 @@
        "Credit Card   38342.0  2.913440  2.739069  0.01  1.99  2.0  3.0  270.00"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +728,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c298fdcb",
+   "id": "5455d220",
    "metadata": {},
    "source": [
     "Oh wow, the mean of cash is a bit higher; median on the other hand... However, with such few results I think I'll ignore this column."
@@ -735,17 +736,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "1711abcb",
+   "execution_count": 18,
+   "id": "39d93846",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.drop(['payment_type'], axis = 1)"
+    "df = df.drop(['payment_type'], axis = 1) #Potentially I wonder if we should just remove the cash ons, but eh..."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2cc0cc75",
+   "id": "e68bfbf6",
    "metadata": {},
    "source": [
     "Oooh date. On the topic - recall that we're in the month of January, a typically cold month in Chicago (without examining what actually happened, but statistically...). As far as I know, nothing stands out re. 2015... However, the weekend factor might contribute to matters, assuming most people have off Saturday and on Sunday (and on that note Friday evening, say after 19, should likely also be considered an evening...\n",
@@ -759,15 +760,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "id": "25717592",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['day_of_week'] = pd.to_datetime(df['start_date']).dt.day_name()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "60c3220a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#For now at least let's just make things simple and assign anything on Saturday or Sunday to be the weekend\n",
+    "df['weekend'] = [1 if i in ['Saturday','Sunday'] else 0 for i in df['day_of_week']]\n",
+    "\n",
+    "# df.iloc[0, df.columns.get_loc('start_time')] > time(17,00)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "1a66af02",
+   "id": "0d8c025d",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
+   "id": "c8921a63",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "id": "cb84c008",
    "metadata": {},
    "outputs": [
@@ -803,6 +835,8 @@
        "      <th>start_date</th>\n",
        "      <th>start_time</th>\n",
        "      <th>trip_total_pre_tip</th>\n",
+       "      <th>day_of_week</th>\n",
+       "      <th>weekend</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -819,6 +853,8 @@
        "      <td>2015-01-14</td>\n",
        "      <td>14:30:00</td>\n",
        "      <td>5.65</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -833,6 +869,8 @@
        "      <td>2015-01-16</td>\n",
        "      <td>03:30:00</td>\n",
        "      <td>12.25</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -847,6 +885,8 @@
        "      <td>2015-01-01</td>\n",
        "      <td>01:30:00</td>\n",
        "      <td>11.65</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -861,6 +901,8 @@
        "      <td>2015-01-24</td>\n",
        "      <td>06:00:00</td>\n",
        "      <td>3.85</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -875,6 +917,8 @@
        "      <td>2015-01-06</td>\n",
        "      <td>22:00:00</td>\n",
        "      <td>4.85</td>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -895,15 +939,15 @@
        "3                     6.0   3.85  15.71     0.0  2015-01-24   06:00:00   \n",
        "4                     6.0   4.85   1.00     0.0  2015-01-06   22:00:00   \n",
        "\n",
-       "   trip_total_pre_tip  \n",
-       "0                5.65  \n",
-       "1               12.25  \n",
-       "2               11.65  \n",
-       "3                3.85  \n",
-       "4                4.85  "
+       "   trip_total_pre_tip day_of_week  weekend  \n",
+       "0                5.65   Wednesday        0  \n",
+       "1               12.25      Friday        0  \n",
+       "2               11.65    Thursday        0  \n",
+       "3                3.85    Saturday        1  \n",
+       "4                4.85     Tuesday        0  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
